<resources>
    <string name="app_name">FIMSnake</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Alias: </string>
    <string name="pref_title_mac">Mac address: </string>
    <string name="pref_title_textures">Textures: </string>
    <string name="pref_title_notification">Notification: </string>
    <string name="pref_title_sounds">Sounds: </string>
    <string name="pref_default_display_name">Unknow</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">Enable notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="texturesString">Enable textures</string>
    <string name="texturesSummary">Recommended turn off if FPS is too low.</string>
    <string name="preferencesSecondPlayer">Enable second player</string>
    <string name="pref_game">Game settings</string>


    <string-array name="pref_snake_color_tiles">
        <item>BLUE</item>
        <item>RED</item>
    </string-array>
    <string-array name="pref_snake_color_values">
        <item>1</item>
        <item>0</item>
    </string-array>

    <string name="pref_title_snake_color">Select color of player one</string>
    <string name="pref_title_snake_color_summary">Snake color (tap to change)</string>
    <string name="pref_title_snake_color2">Select color of player two</string>
    <string name="title_activity_score_fire_base">ScoreFireBase</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="score_title">SCORE</string>
    <string name="preferences_title">SETTINGS</string>
    <string name="title_activity_tap_score">tap_score</string>
    <string name="tab_text_1_myScore">My score</string>
    <string name="tab_text_2_dayBest">Last played games</string>
    <string name="tab_text_3_first100">TOP 100</string>
    <string name="tab_text_4_myStatistic">My Statistics</string>
    <string name="pref_sync">synchronize</string>
    <string name="channel_name">channel</string>
    <string name="channel_description">channelDec</string>


</resources>
