<preference-headers xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="cz.uhk.fimsnake.activity.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="cz.uhk.fimsnake.activity.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="cz.uhk.fimsnake.activity.SettingsActivity$GamePreferenceFragment"
        android:icon="@drawable/ic_game_black"
        android:title="@string/pref_game" />

</preference-headers>
